# ai-incident-response

./: .env.example  .gitignore  README.md  demo.py  pyproject.toml  railway.toml  run_incident.py
.github/workflows/: ci.yml
agents/: data_collector.py  diagnostic_reasoner.py  monitor_triage.py  postmortem_writer.py  remediation_planner.py
api/: main.py
docs/: ADR-001-langgraph.md  ADR-002-models.md  ADR-003-contextual-retrieval.md  ADR-004-hitl.md  ADR-005-evaluation.md
evals/: metrics.py  results_latest.json  run_evals.py
evals/datasets/: historical_incidents.json
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
graph/: checkpointer.py  state.py  workflow.py
infra/: Dockerfile  docker-compose.yml
rag/: chroma_store.py  ingestion.py  retriever.py  seed_runbooks.py
schemas/: diagnosis.py  incident.py  postmortem.py  remediation.py
tests/: test_data_collector.py  test_hitl.py  test_schemas.py  test_state.py  test_tools_mock.py
tools/: github_api.py  kubernetes_api.py  loki.py  prometheus.py  slack_hitl.py
