[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-incident-response"
version = "0.1.0"
description = "Agentic incident response system with 5 LangGraph agents"
requires-python = ">=3.11"

dependencies = [
    # Orchestration
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-groq>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    # RAG
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "cohere>=5.0.0",          # reranker
    # Structured outputs
    "pydantic>=2.8.0",
    # Evaluation
    "langsmith>=0.1.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    # Tools / integrations
    "httpx>=0.27.0",
    "prometheus-client>=0.21.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",        # retry logic
    "structlog>=24.0.0",      # structured logging
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.setuptools.packages.find]
include = ["agents*", "graph*", "tools*", "rag*", "schemas*", "evals*", "api*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
